# lob-alpha-engine

./: .gitignore  CMakeLists.txt  README.md  requirements.txt
.github/workflows/: ci.yml
tests/: test_dummy.cpp
